[tool.poetry]
name = "rl-experiments"
version = "0.1.0"
description = ""
authors = ["Javier <javier.smith.dlc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "1.12.1+cu113", source = "pytorch-gpu-src"}
torchvision = {version = "0.13.1+cu113", source = "pytorch-gpu-src"}
stable-baselines3 = "2.0.0"
swig = "^4.1.1.post1"
gymnasium = {version = "0.28.1", extras = ["box2d"]}
huggingface-sb3 = "^3.0"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
rich = "^13.7.0"
moviepy = "^1.0.3"
ffmpeg = "^1.4"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu113"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
